<resources>
    <string name="app_name">Leistungen</string>
    <string name="no_records">Keine Leistungen</string>
    <string name="add_record">Neue Leistung</string>
    <string name="statistic">Statistik</string>
    <string name="mod_num">Modulnummer</string>
    <string name="mod_name">Modulname</string>
    <string name="semester">Semester</string>
    <string name="sommersemester">Sommersemester</string>
    <string name="crP">Credit Points</string>
    <string name="note">Note in %</string>
    <string name="weighting">50% Gewichtung</string>
    <string name="save">SPEICHERN</string>
    <string name="close">SCHLIESSEN</string>

    <string name="mod_num_not_empty">Modulenummer darf nicht leer sein!</string>
    <string name="crp_not_empty">Credit Points darf nicht leer sein!</string>
    <string name="crp_greater_15">Credit Points darf nicht größer als 15 sein!</string>
    <string name="crp_less_3">Credit Points darf nicht kleiner als 3 sein!</string>
    <string name="note_error">Die Note kann entweder 0 sein, oder 50% - 100%!</string>
</resources>